# a-simple-CMake-project

./: CMakeLists.txt  README.md  main.cpp
sub_lib_1/: CMakeLists.txt  lib.cpp  lib.h
sub_lib_2/: CMakeLists.txt  lib.cpp  lib.h
